welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:8: error: not found: value R
      if (litMessage==R){
                      ^BDRBuggle:12: error: not found: value L
      else if (litMessage==L){
                           ^BDRBuggle:16: error: not found: value I
      else if (litMessage==I){
                           ^BDRBuggle:20: error: not found: value A
      else if (litMessage==A){
                           ^BDRBuggle:23: error: not found: value B
      else if (litMessage==B){
                           ^BDRBuggle:27: error: not found: value C
      else if (litMessage==C){
                           ^BDRBuggle:32: error: not found: value Z
      else if (litMessage==Z){
                           ^BDRBuggle:35: error: not found: value Y
      else if (litMessage==Y){
                           ^BDRBuggle:39: error: not found: value X
      else if (litMessage==X){
                           ^